# two_points_interpolation_cpp

./: .gitignore  README.md  build_and_test.sh  test_interpolation.cpp  two_points_interpolation_constant_acc.hpp  two_points_interpolation_constant_jerk.hpp
.github/: pull_request_template.md
.github/workflows/: copilot-review.yml  test.yml
docs/: CHANGELOG.md
examples/: CMakeLists.txt  README.md  build.sh  build_and_run.sh  constant_acc_example.cpp  constant_jerk_example.cpp  constraints.yaml  constraints_case0.yaml  constraints_case1.yaml  constraints_jerk.yaml  run.sh  two_points_interpolation_constant_acc_example.cpp  two_points_interpolation_constant_jerk_example.cpp
include/: two_points_interpolation_constant_acc.hpp
include/two_point_interpolation/: constant_acc.hpp  constant_jerk.hpp
tests/: test_interpolation.cpp
